--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.8", features = ["derive"] }
+
+[build-dependencies]
+clap = { version = "4.4.8", features = ["derive"] }
+clap_complete = "4.4.4"
+clap_mangen = "0.2.15"
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
+rustympkglib = "0.1.1"
+serde = "1.0.193"
+toml = "0.8.8"
