--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ clap = { version = "4.4.8", features = ["derive"] }
 colored = "2.0.4"
 regex = "1.10.2"
 
+# server
+rocket = "0.5.0"
+
 [build-dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 clap_complete = "4.4.4"
