--- a/jd/Cargo.toml
+++ b/jd/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cli"
+name = "jd"
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -8,5 +8,5 @@ edition.workspace = true
 publish.workspace = true
 
 [dependencies]
-jd = { path = "../jd" }
+johnnydecimal = { path = "../johnnydecimal" }
 clap = { version = "4.4.8", features = ["derive"] }
