feat: Use sanitise-file-name to sanitize file names
This excellent library by Chris Morgan seems to do everything I need it
to do and with minimal overhead. This not only covers file names with
comments, but also file names that could be used for malicious purposes
such as directory traversal.

--- a/johnnydecimal/Cargo.toml
+++ b/johnnydecimal/Cargo.toml
@@ -6,3 +6,6 @@ repository.workspace = true
 license.workspace = true
 edition.workspace = true
 publish.workspace = true
+
+[dependencies]
+sanitise-file-name = "1.0.0"
