--- a/jd/Cargo.toml
+++ b/jd/Cargo.toml
@@ -10,3 +10,4 @@ publish.workspace = true
 [dependencies]
 johnnydecimal = { path = "../johnnydecimal" }
 clap = { version = "4.4.8", features = ["derive"] }
+trash = "3.1.2"
