--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: cargo install tarpaulin
+      - run: cargo install cargo-tarpaulin
       - run: cargo tarpaulin --fail-coverage 80
