feat(cargo): Use workspace lints
This bumps the minimum supported rust version to 1.74.0.

--- a/jd/Cargo.toml
+++ b/jd/Cargo.toml
@@ -11,3 +11,6 @@ publish.workspace = true
 johnnydecimal = { path = "../johnnydecimal" }
 clap = { version = "4.4.8", features = ["derive"] }
 trash = "3.1.2"
+
+[lints]
+workspace = true
